@@ -1,3 +1,7 @@
+2010-06-28  Josh Triplett  <josh@joshtriplett.org>
+
+	* mmap/i386/pc/mmap_helper.S: Set CF on return.
+
 2010-06-28  Colin Watson  <cjwatson@ubuntu.com>
 
 	* util/grub-install.in: Add --debug-image= option.
